{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 2321,
  "lineage": "e26bcd0d-e74e-192e-2ba7-d9801608cf11",
  "resources": [
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/frontendIPConfigurations/internal-ip-config",
                "load_balancer_rules": [
                  "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/loadBalancingRules/prod-backend-rule"
                ],
                "name": "internal-ip-config",
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-1"
              }
            ],
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb",
            "location": "centralus",
            "name": "prod-backend-lb",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "prod-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "data.azurerm_client_config.current",
            "module.database.azurerm_postgresql_flexible_server.primary",
            "module.database.azurerm_postgresql_flexible_server.replica",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_checkpoints",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_connections",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_ssl",
            "module.database.azurerm_postgresql_flexible_server_database.db",
            "module.database.random_password.postgres_password",
            "module.dns.azurerm_private_dns_zone.postgres",
            "module.dns.azurerm_private_dns_zone_virtual_network_link.postgres",
            "module.keyvault.azurerm_key_vault.kv",
            "module.keyvault.azurerm_role_assignment.backend_secret_user",
            "module.keyvault.azurerm_role_assignment.frontend_secret_user",
            "module.keyvault.azurerm_role_assignment.kv_admin",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Compute/virtualMachineScaleSets/prod-backend-vmss/virtualMachines/1/networkInterfaces/backend-nic/ipConfigurations/backend-ipconfig"
            ],
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/backendAddressPools/prod-backend-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/loadBalancingRules/prod-backend-rule"
            ],
            "loadbalancer_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb",
            "name": "prod-backend-backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "data.azurerm_client_config.current",
            "module.backend.azurerm_lb.backend",
            "module.database.azurerm_postgresql_flexible_server.primary",
            "module.database.azurerm_postgresql_flexible_server.replica",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_checkpoints",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_connections",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_ssl",
            "module.database.azurerm_postgresql_flexible_server_database.db",
            "module.database.random_password.postgres_password",
            "module.dns.azurerm_private_dns_zone.postgres",
            "module.dns.azurerm_private_dns_zone_virtual_network_link.postgres",
            "module.keyvault.azurerm_key_vault.kv",
            "module.keyvault.azurerm_role_assignment.backend_secret_user",
            "module.keyvault.azurerm_role_assignment.frontend_secret_user",
            "module.keyvault.azurerm_role_assignment.kv_admin",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/probes/prod-backend-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/loadBalancingRules/prod-backend-rule"
            ],
            "loadbalancer_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb",
            "name": "prod-backend-probe",
            "number_of_probes": 2,
            "port": 8080,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/health"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "data.azurerm_client_config.current",
            "module.backend.azurerm_lb.backend",
            "module.database.azurerm_postgresql_flexible_server.primary",
            "module.database.azurerm_postgresql_flexible_server.replica",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_checkpoints",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_connections",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_ssl",
            "module.database.azurerm_postgresql_flexible_server_database.db",
            "module.database.random_password.postgres_password",
            "module.dns.azurerm_private_dns_zone.postgres",
            "module.dns.azurerm_private_dns_zone_virtual_network_link.postgres",
            "module.keyvault.azurerm_key_vault.kv",
            "module.keyvault.azurerm_role_assignment.backend_secret_user",
            "module.keyvault.azurerm_role_assignment.frontend_secret_user",
            "module.keyvault.azurerm_role_assignment.kv_admin",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.backend[0]",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/backendAddressPools/prod-backend-backend-pool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/frontendIPConfigurations/internal-ip-config",
            "frontend_ip_configuration_name": "internal-ip-config",
            "frontend_port": 8080,
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/loadBalancingRules/prod-backend-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb",
            "name": "prod-backend-rule",
            "probe_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/loadBalancers/prod-backend-lb/probes/prod-backend-probe",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "data.azurerm_client_config.current",
            "module.backend.azurerm_lb.backend",
            "module.backend.azurerm_lb_backend_address_pool.backend",
            "module.backend.azurerm_lb_probe.backend",
            "module.database.azurerm_postgresql_flexible_server.primary",
            "module.database.azurerm_postgresql_flexible_server.replica",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_checkpoints",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_connections",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_ssl",
            "module.database.azurerm_postgresql_flexible_server_database.db",
            "module.database.random_password.postgres_password",
            "module.dns.azurerm_private_dns_zone.postgres",
            "module.dns.azurerm_private_dns_zone_virtual_network_link.postgres",
            "module.keyvault.azurerm_key_vault.kv",
            "module.keyvault.azurerm_role_assignment.backend_secret_user",
            "module.keyvault.azurerm_role_assignment.frontend_secret_user",
            "module.keyvault.azurerm_role_assignment.kv_admin",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/backendAddressPools/backend-pool",
                "ip_addresses": [],
                "name": "backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 3000,
                "probe_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/probes/health-probe",
                "probe_name": "health-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/frontendIPConfigurations/frontend-ip-config",
                "name": "frontend-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/publicIPAddresses/prod-frontend-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-appgw-subnet"
              }
            ],
            "global": [],
            "http2_enabled": false,
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/frontendIPConfigurations/frontend-ip-config",
                "frontend_ip_configuration_name": "frontend-ip-config",
                "frontend_port_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw",
            "identity": [],
            "listener": [],
            "location": "centralus",
            "name": "prod-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/probes/health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "health-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 3000,
                "protocol": "Http",
                "proxy_protocol_header_enabled": false,
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/backendAddressPools/backend-pool",
                "backend_address_pool_name": "backend-pool",
                "backend_http_settings_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/applicationGateways/prod-appgw/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "prod-rg",
            "rewrite_rule_set": [],
            "routing_rule": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.2"
              }
            ],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-appgw",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "data.azurerm_client_config.current",
            "module.backend.azurerm_application_gateway.frontend",
            "module.backend.azurerm_lb.backend",
            "module.backend.azurerm_lb_backend_address_pool.backend",
            "module.backend.azurerm_lb_probe.backend",
            "module.backend.azurerm_lb_rule.backend",
            "module.backend.azurerm_linux_virtual_machine_scale_set.vmss",
            "module.backend.azurerm_monitor_autoscale_setting.vmss_autoscale",
            "module.backend.azurerm_public_ip.lb",
            "module.backend.azurerm_user_assigned_identity.vmss_identity",
            "module.backend.tls_private_key.ssh",
            "module.database.azurerm_postgresql_flexible_server.primary",
            "module.database.azurerm_postgresql_flexible_server.replica",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_checkpoints",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_connections",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_ssl",
            "module.database.azurerm_postgresql_flexible_server_database.db",
            "module.database.random_password.postgres_password",
            "module.dns.azurerm_private_dns_zone.postgres",
            "module.dns.azurerm_private_dns_zone_virtual_network_link.postgres",
            "module.frontend.azurerm_public_ip.lb",
            "module.keyvault.azurerm_key_vault.kv",
            "module.keyvault.azurerm_role_assignment.backend_secret_user",
            "module.keyvault.azurerm_role_assignment.frontend_secret_user",
            "module.keyvault.azurerm_role_assignment.kv_admin",
            "module.network.azurerm_subnet.appgw",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.frontend[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/publicIPAddresses/prod-frontend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.249.254.63",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "prod-frontend-pip",
            "resource_group_name": "prod-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-frontend-pip",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "data.azurerm_client_config.current",
            "module.backend.azurerm_application_gateway.frontend",
            "module.backend.azurerm_lb.backend",
            "module.backend.azurerm_lb_backend_address_pool.backend",
            "module.backend.azurerm_lb_probe.backend",
            "module.backend.azurerm_lb_rule.backend",
            "module.backend.azurerm_linux_virtual_machine_scale_set.vmss",
            "module.backend.azurerm_monitor_autoscale_setting.vmss_autoscale",
            "module.backend.azurerm_public_ip.lb",
            "module.backend.azurerm_user_assigned_identity.vmss_identity",
            "module.backend.tls_private_key.ssh",
            "module.database.azurerm_postgresql_flexible_server.primary",
            "module.database.azurerm_postgresql_flexible_server.replica",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_checkpoints",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_log_connections",
            "module.database.azurerm_postgresql_flexible_server_configuration.primary_ssl",
            "module.database.azurerm_postgresql_flexible_server_database.db",
            "module.database.random_password.postgres_password",
            "module.dns.azurerm_private_dns_zone.postgres",
            "module.dns.azurerm_private_dns_zone_virtual_network_link.postgres",
            "module.keyvault.azurerm_key_vault.kv",
            "module.keyvault.azurerm_role_assignment.backend_secret_user",
            "module.keyvault.azurerm_role_assignment.frontend_secret_user",
            "module.keyvault.azurerm_role_assignment.kv_admin",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/natGateways/prod-natgw",
            "idle_timeout_in_minutes": 10,
            "location": "centralus",
            "name": "prod-natgw",
            "resource_group_name": "prod-rg",
            "resource_guid": "87219255-5efa-4ba0-89f7-387f111656ec",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-natgw",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/natGateways/prod-natgw|/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/publicIPAddresses/prod-natgw-pip",
            "nat_gateway_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/natGateways/prod-natgw",
            "public_ip_address_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/publicIPAddresses/prod-natgw-pip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_nat_gateway.natgw",
            "module.network.azurerm_public_ip.natgw-ip"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "bastion",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-bastion-nsg",
            "location": "centralus",
            "name": "prod-bastion-nsg",
            "resource_group_name": "prod-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Inbound",
                "name": "AllowBastionHostComm",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancerInbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManagerInbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHttpsInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-bastion-nsg",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-database-nsg",
            "location": "centralus",
            "name": "prod-database-nsg",
            "resource_group_name": "prod-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowPostgreSQLInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-database-nsg",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name"
          ]
        },
        {
          "index_key": "private",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-private-nsg",
            "location": "centralus",
            "name": "prod-private-nsg",
            "resource_group_name": "prod-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowBackendAppPort",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-private-nsg",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-public-nsg",
            "location": "centralus",
            "name": "prod-public-nsg",
            "resource_group_name": "prod-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHFromBastion",
                "priority": 115,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.7.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPSInbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-public-nsg",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/publicIPAddresses/prod-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.90.101",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "prod-bastion-pip",
            "resource_group_name": "prod-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-bastion-pip",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "natgw-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/publicIPAddresses/prod-natgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "130.131.242.19",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "prod-natgw-pip",
            "resource_group_name": "prod-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-natgw-pip",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.8.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-appgw-subnet",
            "name": "prod-appgw-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod-rg",
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-appgw-subnet",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162",
            "virtual_network_name": "prod-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.7.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod-rg",
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162",
            "virtual_network_name": "prod-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "flexi-servers",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-db-subnet-1",
            "name": "prod-db-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod-rg",
            "service_endpoints": [
              "Microsoft.SQL",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-db-subnet-1",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162",
            "virtual_network_name": "prod-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_virtual_network.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "flexi-servers",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-db-subnet-2",
            "name": "prod-db-subnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod-rg",
            "service_endpoints": [
              "Microsoft.SQL",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-db-subnet-2",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162",
            "virtual_network_name": "prod-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-1",
            "name": "prod-private-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod-rg",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-private-subnet-1",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162",
            "virtual_network_name": "prod-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_virtual_network.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-2",
            "name": "prod-private-subnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod-rg",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-private-subnet-2",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162",
            "virtual_network_name": "prod-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-public-subnet-1",
            "name": "prod-public-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod-rg",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-public-subnet-1",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162",
            "virtual_network_name": "prod-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_virtual_network.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-public-subnet-2",
            "name": "prod-public-subnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod-rg",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-public-subnet-2",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162",
            "virtual_network_name": "prod-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-1",
            "nat_gateway_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/natGateways/prod-natgw",
            "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_nat_gateway.natgw",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-2",
            "nat_gateway_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/natGateways/prod-natgw",
            "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_nat_gateway.natgw",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-db-subnet-1",
            "network_security_group_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-database-nsg",
            "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-db-subnet-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_virtual_network.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-db-subnet-2",
            "network_security_group_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-database-nsg",
            "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-db-subnet-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.database",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-1",
            "network_security_group_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-private-nsg",
            "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-2",
            "network_security_group_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-private-nsg",
            "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-public-subnet-1",
            "network_security_group_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-public-nsg",
            "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-public-subnet-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.public",
            "module.network.azurerm_virtual_network.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-public-subnet-2",
            "network_security_group_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-public-nsg",
            "subnet_id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-public-subnet-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.name",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.public",
            "module.network.azurerm_virtual_network.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "401eac4f-6805-44ab-b06e-98d3bb71074e",
            "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet",
            "location": "centralus",
            "name": "prod-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "prod-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-public-subnet-1",
                "name": "prod-public-subnet-1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-public-nsg",
                "service_endpoints": [
                  "Microsoft.ContainerRegistry",
                  "Microsoft.KeyVault",
                  "Microsoft.Storage"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-public-subnet-2",
                "name": "prod-public-subnet-2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-public-nsg",
                "service_endpoints": [
                  "Microsoft.ContainerRegistry",
                  "Microsoft.KeyVault",
                  "Microsoft.Storage"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-1",
                "name": "prod-private-subnet-1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-private-nsg",
                "service_endpoints": [
                  "Microsoft.ContainerRegistry",
                  "Microsoft.KeyVault",
                  "Microsoft.Storage"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.4.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-private-subnet-2",
                "name": "prod-private-subnet-2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-private-nsg",
                "service_endpoints": [
                  "Microsoft.ContainerRegistry",
                  "Microsoft.KeyVault",
                  "Microsoft.Storage"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.5.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "flexi-servers",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-db-subnet-1",
                "name": "prod-db-subnet-1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-database-nsg",
                "service_endpoints": [
                  "Microsoft.Sql",
                  "Microsoft.Storage"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.6.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "flexi-servers",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-db-subnet-2",
                "name": "prod-db-subnet-2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/networkSecurityGroups/prod-database-nsg",
                "service_endpoints": [
                  "Microsoft.Sql",
                  "Microsoft.Storage"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.7.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.8.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8eae94cc-2eea-4ec3-a98e-6fdae439c162/resourceGroups/prod-rg/providers/Microsoft.Network/virtualNetworks/prod-vnet/subnets/prod-appgw-subnet",
                "name": "prod-appgw-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "prod-vnet",
            "resource_group_name": "prod-rg",
            "subscription_id": "8eae94cc-2eea-4ec3-a98e-6fdae439c162"
          },
          "dependencies": [
            "azurerm_resource_group.name"
          ]
        }
      ]
    }
  ]
}